tests/reject/const_nonliteral.ty
fn seed() -> int:
    return 7

const X = seed()

fn main():
    println(str(X))
